<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_theme_gradient"
    tools:context=".controllers.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="344dp"
        android:layout_gravity="center"
        android:scaleType="centerInside"
        android:src="@drawable/a2d2_text_logo"
        android:contentDescription="@string/home_page_logo_text_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_navigate_to_rules"/>

    <android.support.design.button.MaterialButton
        android:id="@+id/button_navigate_to_rules"
        style="@style/App.MaterialButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/request_ride_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_main_driver_login"
        />

    <android.support.design.button.MaterialButton
        android:id="@+id/button_main_driver_login"
        style="@style/App.MaterialButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/main_driver_login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</android.support.constraint.ConstraintLayout>