<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/driverBackgroundColor"
    tools:context=".controllers.Driver_RideRequestList">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TabLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TabItem
                android:id="@+id/ride_requests_available_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_ride_available" />

            <android.support.design.widget.TabItem
                android:id="@+id/ride_requests_in_progress_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_ride_in_progress" />

            <android.support.design.widget.TabItem
                android:id="@+id/ride_requests_completed_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_ride_completed" />
        </android.support.design.widget.TabLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/ride_requests_available_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

        </android.support.v7.widget.RecyclerView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/ride_requests_in_progress_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

        </android.support.v7.widget.RecyclerView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/ride_requests_completed_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>
</ScrollView>